@@ -555,7 +555,7 @@ public class InterpolationTree<S extends AbstractState, I extends Interpolant<S,
 
     @Override
     public ARGPath getNextPathForInterpolation() {
-      ARGState current = sources.remove(0);
+      ARGState current = sources.removeFirst();
 
       assert current.isTarget() : "current element is not a target";
 
